# search_engine

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  answers.json  config.json  requests.json  search_engine.cpp  search_engine.sln  search_engine.vcxproj  search_engine.vcxproj.filters
Sample-Test1/: Sample-Test1.sln  Sample-Test1.vcxproj  test.cpp
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
unneccessaryTests/googletest-release-1.11.0/googletest-release-1.11.0/googletest/include/gtest/: gtest.h
